fix broken about page on mobile + add Louis George Cafe font

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,3 +32,8 @@ a {
     }
   }
 }
+
+@font-face {
+  font-family: 'Louis George Cafe';
+  src: url('~@/assets/fonts/Louis George Cafe.ttf');
+}
